--- a/02_data_preprocessing/chapter_2.ipynb
+++ b/02_data_preprocessing/chapter_2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ad411993",
    "metadata": {
     "ExecuteTime": {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "280fdc8a",
    "metadata": {
     "ExecuteTime": {
@@ -172,17 +172,27 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
        "      <th>Adj Close</th>\n",
        "      <th>simple_rtn</th>\n",
        "      <th>log_rtn</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -193,47 +203,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2009-12-31</th>\n",
-       "      <td>6.444379</td>\n",
+       "      <th>2010-01-04 00:00:00+00:00</th>\n",
+       "      <td>6.454505</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-01-04</th>\n",
-       "      <td>6.544686</td>\n",
-       "      <td>0.015565</td>\n",
-       "      <td>0.015445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-05</th>\n",
-       "      <td>6.556003</td>\n",
+       "      <th>2010-01-05 00:00:00+00:00</th>\n",
+       "      <td>6.465665</td>\n",
        "      <td>0.001729</td>\n",
-       "      <td>0.001728</td>\n",
+       "      <td>0.001727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-01-06</th>\n",
-       "      <td>6.451722</td>\n",
+       "      <th>2010-01-06 00:00:00+00:00</th>\n",
+       "      <td>6.362821</td>\n",
        "      <td>-0.015906</td>\n",
        "      <td>-0.016034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-01-07</th>\n",
-       "      <td>6.439794</td>\n",
+       "      <th>2010-01-07 00:00:00+00:00</th>\n",
+       "      <td>6.351058</td>\n",
        "      <td>-0.001849</td>\n",
-       "      <td>-0.001851</td>\n",
+       "      <td>-0.001850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-08 00:00:00+00:00</th>\n",
+       "      <td>6.393280</td>\n",
+       "      <td>0.006648</td>\n",
+       "      <td>0.006626</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Adj Close  simple_rtn   log_rtn\n",
-       "Date                                       \n",
-       "2009-12-31   6.444379         NaN       NaN\n",
-       "2010-01-04   6.544686    0.015565  0.015445\n",
-       "2010-01-05   6.556003    0.001729  0.001728\n",
-       "2010-01-06   6.451722   -0.015906 -0.016034\n",
-       "2010-01-07   6.439794   -0.001849 -0.001851"
+       "Price                     Adj Close simple_rtn   log_rtn\n",
+       "Ticker                         AAPL                     \n",
+       "Date                                                    \n",
+       "2010-01-04 00:00:00+00:00  6.454505        NaN       NaN\n",
+       "2010-01-05 00:00:00+00:00  6.465665   0.001729  0.001727\n",
+       "2010-01-06 00:00:00+00:00  6.362821  -0.015906 -0.016034\n",
+       "2010-01-07 00:00:00+00:00  6.351058  -0.001849 -0.001850\n",
+       "2010-01-08 00:00:00+00:00  6.393280   0.006648  0.006626"
       ]
      },
      "execution_count": 6,
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,14 +302,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-30T14:52:47.939066Z",
      "start_time": "2019-11-30T14:52:47.902169Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nasdaqdatalink'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnasdaqdatalink\u001b[39;00m\n\u001b[1;32m      4\u001b[0m nasdaqdatalink\u001b[38;5;241m.\u001b[39mApiConfig\u001b[38;5;241m.\u001b[39mapi_key \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYOUR_KEY_HERE\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nasdaqdatalink'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import nasdaqdatalink\n",
@@ -320,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -336,15 +359,23 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
        "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>AAPL</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -353,73 +384,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2009-12-31</th>\n",
-       "      <td>6.434927</td>\n",
+       "      <th>2010-01-31 00:00:00+00:00</th>\n",
+       "      <td>5.792498</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-01-31</th>\n",
-       "      <td>5.864813</td>\n",
+       "      <th>2010-02-28 00:00:00+00:00</th>\n",
+       "      <td>6.171305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-02-28</th>\n",
-       "      <td>6.248349</td>\n",
+       "      <th>2010-03-31 00:00:00+00:00</th>\n",
+       "      <td>7.087562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-03-31</th>\n",
-       "      <td>7.176042</td>\n",
+       "      <th>2010-04-30 00:00:00+00:00</th>\n",
+       "      <td>7.874432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2010-04-30</th>\n",
-       "      <td>7.972735</td>\n",
+       "      <th>2010-05-31 00:00:00+00:00</th>\n",
+       "      <td>7.747457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-08-31</th>\n",
-       "      <td>127.677979</td>\n",
+       "      <th>2020-08-31 00:00:00+00:00</th>\n",
+       "      <td>126.103683</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-09-30</th>\n",
-       "      <td>114.587616</td>\n",
+       "      <th>2020-09-30 00:00:00+00:00</th>\n",
+       "      <td>113.174728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-10-31</th>\n",
-       "      <td>107.710991</td>\n",
+       "      <th>2020-10-31 00:00:00+00:00</th>\n",
+       "      <td>106.382889</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-11-30</th>\n",
-       "      <td>117.996666</td>\n",
+       "      <th>2020-11-30 00:00:00+00:00</th>\n",
+       "      <td>116.541718</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-12-31</th>\n",
-       "      <td>132.536850</td>\n",
+       "      <th>2020-12-31 00:00:00+00:00</th>\n",
+       "      <td>130.902618</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>133 rows × 1 columns</p>\n",
+       "<p>132 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Adj Close\n",
-       "Date                  \n",
-       "2009-12-31    6.434927\n",
-       "2010-01-31    5.864813\n",
-       "2010-02-28    6.248349\n",
-       "2010-03-31    7.176042\n",
-       "2010-04-30    7.972735\n",
-       "...                ...\n",
-       "2020-08-31  127.677979\n",
-       "2020-09-30  114.587616\n",
-       "2020-10-31  107.710991\n",
-       "2020-11-30  117.996666\n",
-       "2020-12-31  132.536850\n",
+       "Price                       Adj Close\n",
+       "Ticker                           AAPL\n",
+       "Date                                 \n",
+       "2010-01-31 00:00:00+00:00    5.792498\n",
+       "2010-02-28 00:00:00+00:00    6.171305\n",
+       "2010-03-31 00:00:00+00:00    7.087562\n",
+       "2010-04-30 00:00:00+00:00    7.874432\n",
+       "2010-05-31 00:00:00+00:00    7.747457\n",
+       "...                               ...\n",
+       "2020-08-31 00:00:00+00:00  126.103683\n",
+       "2020-09-30 00:00:00+00:00  113.174728\n",
+       "2020-10-31 00:00:00+00:00  106.382889\n",
+       "2020-11-30 00:00:00+00:00  116.541718\n",
+       "2020-12-31 00:00:00+00:00  130.902618\n",
        "\n",
-       "[133 rows x 1 columns]"
+       "[132 rows x 1 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3276,11 +3308,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0117835dafdb051235b33d006a7ad155411608685e1d44af6fb551f6db3e7774"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('pff2')",
+   "display_name": "finance_book",
    "language": "python",
    "name": "python3"
   },
@@ -3294,7 +3323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
